# ampere-platform-mgmt

./: README.md  config.json  meson.build  meson_options.txt
altra/host-control/power-limit/: ampere-soc-power.cpp  meson.build  xyz.openbmc_project.AmpSocPower.service
altra/host-control/scp-failover/: gpio.cpp  gpio.hpp  meson.build  scp-failover.cpp
altra/host-monitor/boot-progress/: bootprogress.cpp  bootprogress.hpp  meson.build
altra/host-monitor/error-monitor/: ampere-host-error-monitor.cpp  meson.build
altra/host-monitor/error-monitor/include/: internalErrors.hpp  selUtils.hpp  utils.hpp
altra/host-monitor/temp-event-log/: meson.build  tempevent_log.cpp  utils.hpp
utilities/flash/: ampere_eeprom_prog.c  ampere_flashcp.c  nvparm.c
