
# Features
option('error-monitor', type: 'feature',
    description: 'Enable host RAS error monitoring support.')

option('power-limit', type: 'feature',
    description: 'Enable REST API Set/Get SoC Power Limit support.')

# Variables
option(
    'host', type: 'string',
    value: 'altra',
    description: 'Host processor (altra, syrin, ...)',
)

